--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "barryvdh/laravel-ide-helper": "^2.2",
         "predis/predis": "^1.0",
         "maatwebsite/excel": "~2.1.0",
+		"pingpong/modules": "~2.1",
         "vinelab/http": "dev-master"
     },
     "require-dev": {
@@ -24,7 +25,8 @@
             "database"
         ],
         "psr-4": {
-            "App\\": "app/"
+            "App\\": "app/",
+            "Modules\\": "modules/"
         }
     },
     "autoload-dev": {
