--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
         "barryvdh/laravel-ide-helper": "^2.2",
         "predis/predis": "^1.0",
         "maatwebsite/excel": "~2.1.0",
-		"pingpong/modules": "~2.1",
+		"pingpong/modules": "^2.2",
         "vinelab/http": "dev-master"
     },
     "require-dev": {
