--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "predis/predis": "^1.1",
         "maatwebsite/excel": "~2.1.0",
 		"pingpong/modules": "^2.2",
-        "vinelab/http": "dev-master"
+        "vinelab/http": "dev-master",
+        "nesbot/carbon": "^1.22"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
