--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
 		"pingpong/modules": "^2.2",
         "vinelab/http": "dev-master",
         "nesbot/carbon": "^1.22",
-        "curl/curl": "^1.6"
+        "curl/curl": "^1.6",
+        "toplan/laravel-sms": "^2.5"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
