--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
         "laravel/framework": "5.2.*",
         "barryvdh/laravel-ide-helper": "^2.2",
         "predis/predis": "^1.1",
-        "maatwebsite/excel": "~2.1.0",
+        "maatwebsite/excel": "^2.1",
 		"pingpong/modules": "^2.2",
         "vinelab/http": "dev-master",
         "nesbot/carbon": "^1.22",
