私教课后台管理

--- a/.env.example
+++ b/.env.example
@@ -12,7 +12,6 @@ CACHE_DRIVER=file
 SESSION_DRIVER=file
 QUEUE_DRIVER=sync
 
-
 REDIS_HOST=localhost
 REDIS_PASSWORD=null
 REDIS_PORT=6379
@@ -23,3 +22,25 @@ MAIL_PORT=2525
 MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
+
+LUOSIMAO_API_KEY=
+
+ADMIN_DOMAIN=
+OPEN_DOMAIN=
+AIR_DOMAIN=
+
+MD_USER_API_URL=
+
+SESSION_DOMAIN=
+
+SMS_KEY=
+
+MD_USER_API_TOKEN=
+
+QINIU_DEFAULT=
+QINIU_HTTPS=
+QINIU_CUSTOM=
+QINIU_ACCESS_KEY=
+QINIU_SECRET_KEY=
+QINIU_BUCKET=
+QINIU_NOTIFY_URL=
